<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/countdown_timer_container_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corner_banner"
        android:paddingBottom="@dimen/ct_main_container_bottom_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/ct_title_left_right_margin"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="@dimen/ct_title_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/body_text_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_bottom"
                android:gravity="center"
                android:paddingLeft="@dimen/ct_left_right_padding"
                android:paddingRight="@dimen/ct_left_right_padding"
                android:textSize="@dimen/ct_body_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RelativeLayout
                android:id="@+id/inner_timer_container_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/body_text_bottom"
                android:gravity="center"
                android:paddingLeft="@dimen/ct_left_right_padding"
                android:paddingRight="@dimen/ct_left_right_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/day_num_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                    android:textSize="@dimen/ct_timer_num_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/divider2_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                    android:layout_toEndOf="@id/day_num_bottom"
                    android:text="@string/colon"
                    android:textSize="@dimen/ct_timer_num_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hour_num_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                    android:layout_toEndOf="@+id/divider2_bottom"
                    android:textSize="@dimen/ct_timer_num_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/divider3_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                    android:layout_toEndOf="@id/hour_num_bottom"
                    android:text="@string/colon"
                    android:textSize="@dimen/ct_timer_num_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/minute_num_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                    android:layout_toEndOf="@+id/divider3_bottom"
                    android:textSize="@dimen/ct_timer_num_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/divider4_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                    android:layout_toEndOf="@id/minute_num_bottom"
                    android:text="@string/colon"
                    android:textSize="@dimen/ct_timer_num_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sec_num_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                    android:layout_toEndOf="@+id/divider4_bottom"
                    android:textSize="@dimen/ct_timer_num_size"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/day_str_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/day_num_bottom"
                    android:layout_alignStart="@+id/day_num_bottom"
                    android:text="@string/day_name"
                    android:textSize="@dimen/ct_timer_name_size" />

                <TextView
                    android:id="@+id/hour_str_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/day_num_bottom"
                    android:layout_alignStart="@+id/hour_num_bottom"
                    android:layout_toEndOf="@+id/day_str_bottom"
                    android:text="@string/hour_name"
                    android:textSize="@dimen/ct_timer_name_size" />

                <TextView
                    android:id="@+id/minute_str_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/day_num_bottom"
                    android:layout_alignStart="@+id/minute_num_bottom"
                    android:layout_toEndOf="@+id/hour_str_bottom"
                    android:text="@string/minute_name"
                    android:textSize="@dimen/ct_timer_name_size" />

                <TextView
                    android:id="@+id/sec_str_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/day_num_bottom"
                    android:layout_alignStart="@+id/sec_num_bottom"
                    android:layout_toEndOf="@+id/minute_str_bottom"
                    android:text="@string/second_name"
                    android:textSize="@dimen/ct_timer_name_size" />

            </RelativeLayout>

        <ImageButton
            android:id="@+id/close_button_bottom"
            android:layout_width="@dimen/ct_close_button_width"
            android:layout_height="@dimen/ct_close_button_height"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/ct_close_button_margin"
            android:layout_marginTop="@dimen/ct_close_button_margin"
            android:layout_marginRight="@dimen/ct_close_button_margin" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>